--- a/QMU.ipynb
+++ b/QMU.ipynb
@@ -475,13 +475,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Best Solution Found:  ((1, 8), 215.589769852800)\nBest Solution Occurences:  1\n"
+     ]
+    }
+   ],
    "source": [
     "print( \"Best Solution Found: \", Final_Solutions[0])\n",
     "print( \"Best Solution Occurences: \", occurrences[Final_Solutions[0][0]])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
