--- a/QMU_source.ipynb
+++ b/QMU_source.ipynb
@@ -16,12 +16,31 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8d2442c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../')\n",
+    "sys.path.append('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install sympy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8d2442c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import sys\n",
+    "# sys.path.append('../')\n",
     "import math\n",
     "import sympy\n",
     "from sympy import poly\n",
@@ -56,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "140db702",
    "metadata": {},
    "outputs": [],
@@ -74,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "90854899",
    "metadata": {},
    "outputs": [],
@@ -106,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "597710ce",
    "metadata": {},
    "outputs": [],
@@ -128,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "8e5ee3b9",
    "metadata": {},
    "outputs": [],
@@ -158,13 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "670ada0e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Current size of the HUBO: 137\n"
      ]
@@ -217,8 +236,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Size of the HUBO after threshold approximation: 73\n"
      ]
@@ -300,21 +319,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "   1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16       energy num_oc.\n",
-      "1  0  0  1  0  0  0  0  0  1  0  0  0  0  0  0  0 -2791.285156       1\n",
-      "4  0  0  1  0  0  0  0  0  0  0  0  0  0  0  1  0 -2772.867188       1\n",
-      "2  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1 -2753.707031       1\n",
-      "3  0  0  0  1  0  0  0  0  0  0  0  0  1  0  0  0 -2736.689209       1\n",
-      "7  1  0  0  0  0  0  0  0  0  0  0  0  0  1  0  0 -2725.957031       1\n",
-      "0  1  0  0  0  0  0  0  0  0  0  0  1  0  0  0  0 -2724.152344       1\n",
-      "8  0  0  0  0  0  1  0  0  1  0  0  0  0  0  0  0 -2722.300781       1\n",
-      "5  0  0  0  0  0  0  0  1  0  0  0  0  0  0  1  0 -2711.679688       1\n",
-      "9  0  0  0  0  0  0  0  1  0  0  0  0  0  0  1  0 -2711.679688       1\n",
-      "6  0  0  0  0  0  0  0  1  0  0  0  0  0  1  0  0 -2697.425781       1\n",
-      "['BINARY', 10 rows, 10 samples, 16 variables]\n"
+      "   1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16       energy num_oc.\n0  0  0  1  0  0  0  0  0  0  0  0  0  0  0  1  0 -2772.867188       1\n4  0  1  0  0  0  0  0  0  0  0  0  0  0  0  1  0  -2765.46875       1\n9  0  1  0  0  0  0  0  0  0  0  0  0  0  0  1  0  -2765.46875       1\n8  0  1  0  0  0  0  0  0  0  0  1  0  0  0  0  0  -2762.90625       1\n7  0  0  1  0  0  0  0  0  0  0  0  0  0  1  0  0 -2758.613281       1\n1  0  0  0  0  1  0  0  0  1  0  0  0  0  0  0  0 -2747.558594       1\n6  0  0  0  0  0  1  0  0  0  0  1  0  0  0  0  0 -2701.320312       1\n2  0  0  0  0  0  0  0  1  0  0  0  1  0  0  0  0 -2695.621094       1\n5  0  0  0  0  0  0  1  0  0  0  1  0  0  0  0  0 -2693.923828       1\n3  0  0  0  0  0  0  0  1  0  0  0  0  1  0  0  0 -2690.697021       1\n['BINARY', 10 rows, 10 samples, 16 variables]\n"
      ]
     }
    ],
@@ -545,8 +553,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Number of acceptable solutions found:  10\n"
      ]
@@ -572,10 +580,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "All solutions found:  [((3, 1), 220.704690075685), ((1, 8), 215.589769852800), ((3, 7), 211.100698922578), ((4, 5), 196.025016740852), ((1, 6), 176.921160968135), ((8, 7), 171.939415235912), ((6, 1), 170.560071322753), ((1, 4), 149.811102703967), ((8, 6), 141.934996918969)]\n"
+      "All solutions found:  [((2, 7), 218.091277138296), ((3, 7), 211.100698922578), ((3, 6), 208.433572441966), ((2, 3), 197.871109233002), ((5, 1), 183.579631768144), ((6, 3), 153.954258669861), ((7, 3), 132.476827399874), ((8, 5), 119.110256368122), ((8, 4), 116.835617040409)]\n"
      ]
     }
    ],
@@ -598,10 +606,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Occurrences of each solution:  {(3, 1): 1, (3, 7): 1, (8, 7): 2, (1, 8): 1, (6, 1): 1, (1, 4): 1, (4, 5): 1, (8, 6): 1, (1, 6): 1}\n"
+      "Occurrences of each solution:  {(8, 4): 1, (2, 7): 2, (3, 7): 1, (5, 1): 1, (7, 3): 1, (2, 3): 1, (3, 6): 1, (6, 3): 1, (8, 5): 1}\n"
      ]
     }
    ],
@@ -624,11 +632,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Best Solution Found:  ((3, 1), 220.704690075685)\n",
-      "Best Solution Occurences:  1\n"
+      "Best Solution Found:  ((2, 7), 218.091277138296)\nBest Solution Occurences:  2\n"
      ]
     }
    ],
@@ -636,21 +643,12 @@
     "print( \"Best Solution Found: \", Final_Solutions[0])\n",
     "print( \"Best Solution Occurences: \", occurrences[Final_Solutions[0][0]])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91838d51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.16 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -662,7 +660,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
+  },
+  "interpreter": {
+   "hash": "4cd7ab41f5fca4b9b44701077e38c5ffd31fe66a6cab21e0214b68d958d0e462"
   }
  },
  "nbformat": 4,
