Molecules folder uploaded

--- a/Exploration.ipynb
+++ b/Exploration.ipynb
@@ -26,9 +26,124 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Get:1 http://deb.debian.org/debian bullseye InRelease [116 kB]\n",
+      "Get:2 http://deb.debian.org/debian-security bullseye-security InRelease [48.4 kB]\n",
+      "Get:3 http://deb.debian.org/debian bullseye-updates InRelease [44.1 kB]\n",
+      "Get:4 http://deb.debian.org/debian bullseye/main amd64 Packages [8,183 kB]\n",
+      "Get:5 http://deb.debian.org/debian-security bullseye-security/main amd64 Packages [237 kB]\n",
+      "Get:6 http://deb.debian.org/debian bullseye-updates/main amd64 Packages [14.6 kB]\n",
+      "Fetched 8,643 kB in 2s (4,472 kB/s)\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "The following additional packages will be installed:\n",
+      "  libbsd0 libmd0 libx11-6 libx11-data libxau6 libxcb1 libxdmcp6\n",
+      "The following NEW packages will be installed:\n",
+      "  libbsd0 libmd0 libx11-6 libx11-data libxau6 libxcb1 libxdmcp6 libxrender1\n",
+      "0 upgraded, 8 newly installed, 0 to remove and 1 not upgraded.\n",
+      "Need to get 1,437 kB of archives.\n",
+      "After this operation, 4,065 kB of additional disk space will be used.\n",
+      "Get:1 http://deb.debian.org/debian bullseye/main amd64 libmd0 amd64 1.0.3-3 [28.0 kB]\n",
+      "Get:2 http://deb.debian.org/debian bullseye/main amd64 libbsd0 amd64 0.11.3-1 [108 kB]\n",
+      "Get:3 http://deb.debian.org/debian bullseye/main amd64 libxau6 amd64 1:1.0.9-1 [19.7 kB]\n",
+      "Get:4 http://deb.debian.org/debian bullseye/main amd64 libxdmcp6 amd64 1:1.1.2-3 [26.3 kB]\n",
+      "Get:5 http://deb.debian.org/debian bullseye/main amd64 libxcb1 amd64 1.14-3 [140 kB]\n",
+      "Get:6 http://deb.debian.org/debian bullseye/main amd64 libx11-data all 2:1.7.2-1 [311 kB]\n",
+      "Get:7 http://deb.debian.org/debian bullseye/main amd64 libx11-6 amd64 2:1.7.2-1 [772 kB]\n",
+      "Get:8 http://deb.debian.org/debian bullseye/main amd64 libxrender1 amd64 1:0.9.10-1 [33.0 kB]\n",
+      "Fetched 1,437 kB in 0s (12.7 MB/s)\n",
+      "debconf: unable to initialize frontend: Dialog\n",
+      "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 8.)\n",
+      "debconf: falling back to frontend: Readline\n",
+      "Selecting previously unselected package libmd0:amd64.\n",
+      "(Reading database ... 17744 files and directories currently installed.)\n",
+      "Preparing to unpack .../0-libmd0_1.0.3-3_amd64.deb ...\n",
+      "Unpacking libmd0:amd64 (1.0.3-3) ...\n",
+      "Selecting previously unselected package libbsd0:amd64.\n",
+      "Preparing to unpack .../1-libbsd0_0.11.3-1_amd64.deb ...\n",
+      "Unpacking libbsd0:amd64 (0.11.3-1) ...\n",
+      "Selecting previously unselected package libxau6:amd64.\n",
+      "Preparing to unpack .../2-libxau6_1%3a1.0.9-1_amd64.deb ...\n",
+      "Unpacking libxau6:amd64 (1:1.0.9-1) ...\n",
+      "Selecting previously unselected package libxdmcp6:amd64.\n",
+      "Preparing to unpack .../3-libxdmcp6_1%3a1.1.2-3_amd64.deb ...\n",
+      "Unpacking libxdmcp6:amd64 (1:1.1.2-3) ...\n",
+      "Selecting previously unselected package libxcb1:amd64.\n",
+      "Preparing to unpack .../4-libxcb1_1.14-3_amd64.deb ...\n",
+      "Unpacking libxcb1:amd64 (1.14-3) ...\n",
+      "Selecting previously unselected package libx11-data.\n",
+      "Preparing to unpack .../5-libx11-data_2%3a1.7.2-1_all.deb ...\n",
+      "Unpacking libx11-data (2:1.7.2-1) ...\n",
+      "Selecting previously unselected package libx11-6:amd64.\n",
+      "Preparing to unpack .../6-libx11-6_2%3a1.7.2-1_amd64.deb ...\n",
+      "Unpacking libx11-6:amd64 (2:1.7.2-1) ...\n",
+      "Selecting previously unselected package libxrender1:amd64.\n",
+      "Preparing to unpack .../7-libxrender1_1%3a0.9.10-1_amd64.deb ...\n",
+      "Unpacking libxrender1:amd64 (1:0.9.10-1) ...\n",
+      "Setting up libxau6:amd64 (1:1.0.9-1) ...\n",
+      "Setting up libx11-data (2:1.7.2-1) ...\n",
+      "Setting up libmd0:amd64 (1.0.3-3) ...\n",
+      "Setting up libbsd0:amd64 (0.11.3-1) ...\n",
+      "Setting up libxdmcp6:amd64 (1:1.1.2-3) ...\n",
+      "Setting up libxcb1:amd64 (1.14-3) ...\n",
+      "Setting up libx11-6:amd64 (2:1.7.2-1) ...\n",
+      "Setting up libxrender1:amd64 (1:0.9.10-1) ...\n",
+      "Processing triggers for libc-bin (2.31-13+deb11u5) ...\n",
+      "\n",
+      "\n",
+      "\n",
+      "The following additional packages will be installed:\n",
+      "  libice6 x11-common\n",
+      "The following NEW packages will be installed:\n",
+      "  libice6 libsm6 libxext6 x11-common\n",
+      "0 upgraded, 4 newly installed, 0 to remove and 1 not upgraded.\n",
+      "Need to get 399 kB of archives.\n",
+      "After this operation, 660 kB of additional disk space will be used.\n",
+      "Get:1 http://deb.debian.org/debian bullseye/main amd64 x11-common all 1:7.7+22 [252 kB]\n",
+      "Get:2 http://deb.debian.org/debian bullseye/main amd64 libice6 amd64 2:1.0.10-1 [58.5 kB]\n",
+      "Get:3 http://deb.debian.org/debian bullseye/main amd64 libsm6 amd64 2:1.2.3-1 [35.1 kB]\n",
+      "Get:4 http://deb.debian.org/debian bullseye/main amd64 libxext6 amd64 2:1.3.3-1.1 [52.7 kB]\n",
+      "Fetched 399 kB in 0s (4,293 kB/s)\n",
+      "debconf: unable to initialize frontend: Dialog\n",
+      "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 4.)\n",
+      "debconf: falling back to frontend: Readline\n",
+      "\n",
+      "\u001b7\u001b[0;23r\u001b8\u001b[1ASelecting previously unselected package x11-common.\n",
+      "(Reading database ... 18050 files and directories currently installed.)\n",
+      "Preparing to unpack .../x11-common_1%3a7.7+22_all.deb ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [  0%]\u001b[49m\u001b[39m [..........................................................] \u001b8\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [  6%]\u001b[49m\u001b[39m [###.......................................................] \u001b8Unpacking x11-common (1:7.7+22) ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 12%]\u001b[49m\u001b[39m [######....................................................] \u001b8Selecting previously unselected package libice6:amd64.\n",
+      "Preparing to unpack .../libice6_2%3a1.0.10-1_amd64.deb ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 18%]\u001b[49m\u001b[39m [##########................................................] \u001b8Unpacking libice6:amd64 (2:1.0.10-1) ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 24%]\u001b[49m\u001b[39m [#############.............................................] \u001b8Selecting previously unselected package libsm6:amd64.\n",
+      "Preparing to unpack .../libsm6_2%3a1.2.3-1_amd64.deb ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 29%]\u001b[49m\u001b[39m [#################.........................................] \u001b8Unpacking libsm6:amd64 (2:1.2.3-1) ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 35%]\u001b[49m\u001b[39m [####################......................................] \u001b8Selecting previously unselected package libxext6:amd64.\n",
+      "Preparing to unpack .../libxext6_2%3a1.3.3-1.1_amd64.deb ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 41%]\u001b[49m\u001b[39m [#######################...................................] \u001b8Unpacking libxext6:amd64 (2:1.3.3-1.1) ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 47%]\u001b[49m\u001b[39m [###########################...............................] \u001b8Setting up x11-common (1:7.7+22) ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 53%]\u001b[49m\u001b[39m [##############################............................] \u001b8debconf: unable to initialize frontend: Dialog\n",
+      "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78.)\n",
+      "debconf: falling back to frontend: Readline\n",
+      "invoke-rc.d: could not determine current runlevel\n",
+      "invoke-rc.d: policy-rc.d denied execution of start.\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 59%]\u001b[49m\u001b[39m [##################################........................] \u001b8Setting up libxext6:amd64 (2:1.3.3-1.1) ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 65%]\u001b[49m\u001b[39m [#####################################.....................] \u001b8\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 71%]\u001b[49m\u001b[39m [########################################..................] \u001b8Setting up libice6:amd64 (2:1.0.10-1) ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 76%]\u001b[49m\u001b[39m [############################################..............] \u001b8\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 82%]\u001b[49m\u001b[39m [###############################################...........] \u001b8Setting up libsm6:amd64 (2:1.2.3-1) ...\n",
+      "\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 88%]\u001b[49m\u001b[39m [###################################################.......] \u001b8\u001b7\u001b[24;0f\u001b[42m\u001b[30mProgress: [ 94%]\u001b[49m\u001b[39m [######################################################....] \u001b8Processing triggers for libc-bin (2.31-13+deb11u5) ...\n",
+      "\n",
+      "\u001b7\u001b[0;24r\u001b8\u001b[1A\u001b[J"
+     ]
+    }
+   ],
    "source": [
     "! sudo apt-get update\n",
     "! sudo apt-get install -y libxrender1\n",
